--- a/index.html
+++ b/index.html
@@ -7,13 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <title>Parallax</title>
+    <title>Maquetación Landing Page</title>
 </head>
 
 <body>
     <header>
-        <h1>Parallax Effect</h1>
+        <img src="" alt="">
     </header>
+
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Quiénes somos?</a>
+        <a href="#">Localización</a>
+        <a href="#">Tratamiento</a>
+    </nav>
+
+    <section>
+        <h2></h2>
+        <p></p>
+        <p></p>
+    </section>
+
+    <section>
+        <h2></h2>
+        <p></p>
+        <ul>
+            <li>
+                <img src="" alt="">
+                <h3> </h3>
+            </li>
+            <li>
+                <img src="" alt="">
+                <h3> </h3>
+            </li>
+            <li>
+                <img src="" alt="">
+                <h3> </h3>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2></h2>
+        <p></p>
+    </section>
 </body>
 
 </html>
