Finish parrallax effect

--- a/index.html
+++ b/index.html
@@ -7,50 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <title>Maquetación Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <title>Efecto Parallax</title>
 </head>
 
 <body>
-    <header>
-        <img src="" alt="">
-    </header>
+    <div class="bloque parallax imagen-1">
+        <div class="contenedor">
+            <h1>Sección 1</h1>
+        </div>
+    </div>
+    <div class="bloque">
+        <div class="contenedor">
+            <h2>Lorem</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maiores eligendi tempore et, itaque
+                aspernatur ab suscipit repellat ipsum eveniet incidunt, ratione unde fugiat, facilis recusandae
+                repudiandae architecto error sit.</p>
+        </div>
+    </div>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Quiénes somos?</a>
-        <a href="#">Localización</a>
-        <a href="#">Tratamiento</a>
-    </nav>
+    <div class="bloque parallax imagen-2">
+        <div class="contenedor">
+            <h1>Sección 2</h1>
+        </div>
+    </div>
+    <div class="bloque">
+        <div class="contenedor">
+            <h2>Lorem</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maiores eligendi tempore et, itaque
+                aspernatur ab suscipit repellat ipsum eveniet incidunt, ratione unde fugiat, facilis recusandae
+                repudiandae architecto error sit.</p>
+        </div>
+    </div>
 
-    <section>
-        <h2></h2>
-        <p></p>
-        <p></p>
-    </section>
-
-    <section>
-        <h2></h2>
-        <p></p>
-        <ul>
-            <li>
-                <img src="" alt="">
-                <h3> </h3>
-            </li>
-            <li>
-                <img src="" alt="">
-                <h3> </h3>
-            </li>
-            <li>
-                <img src="" alt="">
-                <h3> </h3>
-            </li>
-        </ul>
-    </section>
-
-    <section>
-        <h2></h2>
-        <p></p>
-    </section>
+    <div class="bloque parallax imagen-3">
+        <div class="contenedor">
+            <h1>Sección 3</h1>
+        </div>
+    </div>
+    <div class="bloque">
+        <div class="contenedor">
+            <h2>Lorem</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maiores eligendi tempore et, itaque
+                aspernatur ab suscipit repellat ipsum eveniet incidunt, ratione unde fugiat, facilis recusandae
+                repudiandae architecto error sit.</p>
+        </div>
+    </div>
 </body>
 
 </html>
