--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <div class="bloque parallax imagen-1">
         <div class="contenedor">
-            <h1>Sección 1</h1>
+            <!-- contenteditable permite editar el contenido -->
+            <h1 contenteditable="true">Sección 1</h1>
         </div>
     </div>
     <div class="bloque">
@@ -55,6 +56,10 @@
                 aspernatur ab suscipit repellat ipsum eveniet incidunt, ratione unde fugiat, facilis recusandae
                 repudiandae architecto error sit.</p>
         </div>
+    </div>
+
+    <div>
+        <p class="texto">Texto 3-D</p>
     </div>
 </body>
 
